--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.3",
-    "dotenv": "^16.0.1",
     "ethers": "^5.6.9",
     "hardhat": "^2.10.1"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^1.0.2"
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "dotenv": "^16.0.1"
   }
 }
